# SimpleSearchEngine

./: CMakeLists.txt  README.md
BuildIndex/lib/Spimi/: Spimi.cpp  Spimi.h
NeedForSearcherFiles/: FileForSearcher.txt
Search/lib/Parser/: Parser.cpp  Parser.h
Search/lib/Rank/: Rank.cpp  Rank.h
Search/lib/Terms/: Terms.cpp  Terms.h
tests/: 3425trgfd.txt  fghjmj.txt
